Fix GraalVM readiness advisor accuracy
Align generated metadata with the GraalVM 25 unified schema, tighten Spring AOT and native checks, and expand high-confidence readiness coverage.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>